# familytreemaker

./: .gitignore  README.md  family.dot  main.py  pyproject.toml
familytreemaker/: __init__.py  familytreemaker.py
scripts/: create.py  main.py
