[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "familytreemaker"
version = "0.0.1"
requires-python = ">=3.11"
authors = [
    {name = "Adrien Vergé"},
    {name = "Philipp L. Kinon"}
]
maintainers = [
  {name = "Philipp L. Kinon"}
]
description = "..."
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
